test/types/integral/tooBig.good
error: tooBig.chpl:1: Integer literal overflow: 1000000000000000000000000000000 is too big for type uint64
